// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom icons 1`] = `
.emotion-0 {
  height: 24px;
  width: 24px;
  vertical-align: middle;
}

.emotion-0 * {
  vector-effect: inherit;
}

<div>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      y1="8"
      x2="12"
      y2="12"
    />
    <line
      x1="12"
      y1="16"
      x2="12"
      y2="16"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="18"
      cy="18"
      r="3"
    />
    <circle
      cx="6"
      cy="6"
      r="3"
    />
    <path
      d="M13 6h3a2 2 0 0 1 2 2v7"
    />
    <line
      x1="6"
      y1="9"
      x2="6"
      y2="21"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="18"
      cy="18"
      r="3"
    />
    <circle
      cx="6"
      cy="6"
      r="3"
    />
    <path
      d="M6 21V9a9 9 0 0 0 9 9"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <line
      x1="18"
      y1="6"
      x2="6"
      y2="18"
    />
    <line
      x1="6"
      y1="6"
      x2="18"
      y2="18"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="12"
      cy="12"
      r="6"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <polyline
      points="6 9 12 15 18 9"
    />
  </svg>
  <svg
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    vector-effect="non-scaling-stroke"
    xmlns="http://www.w3.org/2000/svg"
    class="emotion-0"
  >
    <line
      x1="19"
      y1="12"
      x2="5"
      y2="12"
    />
    <polyline
      points="12 19 5 12 12 5"
    />
  </svg>
</div>
`;

exports[`renders with custom color and size 1`] = `
.emotion-0 {
  height: 16px;
  width: 16px;
  vertical-align: middle;
  color: #c27e00;
}

.emotion-0 * {
  vector-effect: inherit;
}

<svg
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
  vector-effect="non-scaling-stroke"
  xmlns="http://www.w3.org/2000/svg"
  class="emotion-0"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
</svg>
`;

exports[`renders without crashing 1`] = `
.emotion-0 {
  height: 24px;
  width: 24px;
  vertical-align: middle;
}

.emotion-0 * {
  vector-effect: inherit;
}

<svg
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
  vector-effect="non-scaling-stroke"
  xmlns="http://www.w3.org/2000/svg"
  class="emotion-0"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
</svg>
`;
